beandrake/resources/css/styles.css
/* ... */
/* -------------------------------------------------------
                     Navigation Menu
---------------------------------------------------------*/


/* ------------------------ Mobile Nav First! --------------------------- */

nav {
    width: 100%;
    
    /* top-most layer is 9999*/
    position: relative;
    z-index: 9999;
}

.nav-top-left {
  float: left;
}

.nav-top-right {
  float: right;
  display: none;
}

.nav-top-left li,
.nav-top-right li {
  list-style: none;         /* removes bullets */
  padding-top: 7px;
  padding-bottom: 4px;
}

.nav-top-left li {
  margin-left: 12px;
    display: inline-block;    /* allows the elements to be side-by-side */
}

.nav-top-right li {
  margin-left: 40px;
}

.nav-top-right li:last-child,
.mobile-nav-icon {
  margin-right: 12px;
}





.nav-top-right .section-link {
  text-transform: uppercase;
}

.section-link:link,
.section-link:visited {
  text-decoration: none;

  font-family: 'Lato', 'Arial', sans-serif;
  font-weight: 300;

  color: #fffaf0;

  border-bottom: 1px solid transparent;
  -webkit-transition: border-bottom 0.2s;
  transition: border-bottom 0.2s;
}

.section-link:hover,
.section-link:active {
  border-bottom: 1px solid #fffaf0;
}

.mobile-nav-icon {
    display: inline-block;
    
    /* let's give them a hand */
    cursor: pointer; 
    
    color: #fffaf0;
    float: right;
    
    padding-top: 2px;
    font-size: 150%;
}

/* ------------------------ Desktop Nav --------------------------- */

@media only screen and (min-width: 620px) {
    
    .mobile-nav-icon {
        /* hide for desktop etc */
        display: none;
    }
    
    .nav-top-right {
        display: inline;
    }
    
    .nav-top-right li {
        /* line up the list items vertically*/
        display: inline-block;
    }
    
}






/* ------------------------ Sticky Nav --------------------------- */



.sticky {
    position: fixed;
    
    /* #4169e1 with slight transparency */
    background-color: rgba(65, 105, 225, 0.95);
    
    /* slightly darker shadow under the menu to give it a shadow/border */
    -webkit-box-shadow: 0 1px 2px #153185;
    box-shadow: 0 1px 2px #153185;
    
}

.sticky .section-link:link,
.sticky .section-link:visited {
  color: #fffaf0;
}







/* -------------------------------------------------------
                         Hero
---------------------------------------------------------*/






/* ------------------ Mobile Hero  ----------------- */




header {
  /*background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.7)), url(vendors/img/berry-van-der-velden-32818.jpg);*/
  /*background-image: linear-gradient(to right, rgb(0, 31, 62), rgba(32, 79, 193, 0.7)), url(vendors/img/berry-van-der-velden-32818.jpg);*/
  /*background-image: linear-gradient(to right, rgb(0, 15, 30), rgba(0, 15, 30, 0.7)), url(vendors/img/berry-van-der-velden-32818.jpg);*/
  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 1)), to(rgba(0, 15, 30, 0.7))), url(../../vendors/img/berry-van-der-velden-32818.jpg);
  background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 15, 30, 0.7)), url(../../vendors/img/berry-van-der-velden-32818.jpg);

  /* finds a way to show as much of the image as possible */
  background-size: cover;
  background-position: center;

  /* scroll past the image */
  background-attachment: fixed;

  /* 100% of viewport */
  height: 100vh;
}


.banner {
    /* as a group, these vertically center the element */
    position: absolute;
    top: 50%;
    -webkit-transform: translate(0%, -50%);
    transform: translate(0%, -50%);

    width: 100%;

    /* all of the banner font-sizes will scale from this */
    font-size: 1.5vw;

    /*background-color: rgba(28, 255, 0, 0.51);*/
}


.banner img {
    /* round! */
    border-radius: 50%;
    
    position: static;

    display: block;
        
    width: 50vw;        
        
    /* centers it */
    margin-left: auto;
    margin-right: auto;
}


.nameplate {
    z-index: 2; 
    
    margin-top: 2vh;
    margin-left: auto;
    margin-right: auto;
    
    display: block;

    /*background-color: rgba(255, 0, 0, 0.51);*/
}

h1,
.nameplate li {
    font-family: 'Josefin Sans', 'Arial', sans-serif;
    font-weight: 100;
    color: white;
}

h1 {
    font-size: 500%;
    text-align: center;
    margin: 0;
    padding: 0 0;

  /*background-color: rgba(65, 105, 225, 0.51);*/
}


/* line that appears after heading */
h1:after{
    display: block;
    height: 1px;
    border-bottom: 1px solid white;
    
    width: 44%;
    margin-top: 1.2%;
    margin-bottom: 1.1%;

    /* centers it */
    margin-left: auto;
    margin-right: auto;
    
    content: " ";  /* content is required */
}


.nameplate ul{
  text-align: center;

/*  background-color: rgba(65, 105, 225, 0.51);*/
}

.nameplate li {
    font-size: 350%;
    padding: 0 1.5vw;

    display: inline-block;
}
/* ... */

